--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                                                 <i class="fas fa-file-archive"></i>
                                             </div>
                                         </div>
-                                        <h6>Andirod penetration</h6>
+                                        <h6>Android penetration</h6>
                                     </div>
                                 </div>
                             </div>
