--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
-    <div class="preloader">
+   <!-- <div class="preloader">
         <h1 class="text-white mb-xl-3 mb-lg-2"><span>Albin Joseph portfolio</span></h1>
     </div>
-
+-->
     <header class="d2c_navbar sticky-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg px-0" id="d2c_main_nav">
